# ChangeLog for media-sound/clementine
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.10 2010/07/01 08:27:15 ssuominen Exp $

*clementine-0.4 (01 Jul 2010)

  01 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  +clementine-0.4.ebuild:
  Version bump wrt #326365 by Lars Wendler.

  24 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> clementine-0.3.ebuild:
  Postinst message for installing libsoup gstreamer plug-in for internet
  radio support wrt #321291.

  23 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> clementine-0.3.ebuild:
  Remove broken VLC engine wrt #325237 by Lars Wendler.

  09 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> clementine-0.3.ebuild:
  Fix missing glib-2.0 include dirs wrt #320699 by Elias Probst and Vicente
  Olivert.

  19 May 2010; Samuli Suominen <ssuominen@gentoo.org> clementine-0.3.ebuild:
  Missing media-plugins/gst-plugins-gio RDEPEND wrt #319697.

*clementine-0.3 (14 May 2010)

  14 May 2010; Samuli Suominen <ssuominen@gentoo.org>
  +clementine-0.3.ebuild, metadata.xml:
  Version bump.

  27 Apr 2010; Samuli Suominen <ssuominen@gentoo.org> clementine-0.2.ebuild:
  Clementine reportedly compiled with boost-1.39 wrt #317521 by adriancz.

*clementine-0.2 (23 Mar 2010)

  23 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  +clementine-0.2.ebuild:
  Version bump.

  04 Mar 2010; Alex Alexander <wired@gentoo.org> clementine-0.1.ebuild:
  added missing boost DEPEND

*clementine-0.1 (22 Feb 2010)

  22 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +clementine-0.1.ebuild:
  Initial commit.
