@@ -1,6 +1,6 @@
 DIST clementine-0.3.tar.gz 3917108 RMD160 b5238aa0b5dd16758205a6dde7f44bbc759b3225 SHA1 7d0337f8bbe93f6320a10776c14d211f5ba507e9 SHA256 4041f55d6bc2f3388bfc070867d1f22f7430a66aa656003c311679f548e9c582
 DIST clementine-0.4.tar.gz 4668881 RMD160 eb79fdf17648442fb7184e9eb886bd5fa3be59f2 SHA1 040c89ac76ef861017d666cd9aabb05603ea7da1 SHA256 b33b544df9c1147e3041f3380ca9e4c13991a297db6d7f2af198513788940702
 EBUILD clementine-0.3.ebuild 1711 RMD160 1ae979fdb40711f6e27ae94ae5bbc8f8dd1a1db5 SHA1 abcb44e48800127f2b754a027eda264ad90f3201 SHA256 140d09d3860ef51075958b7a8f85148c5a3c33e37e9a50ea4007f617d6da56b3
-EBUILD clementine-0.4.ebuild 1746 RMD160 744e5c6da7926694c6c9103495d2c581e14acc62 SHA1 1b03b770b49d965a05e4366cc7d2da3b4004c84d SHA256 3ff74ad9cdd229e1df65fae408e0bc336efad57b6807f49c55f2dff19be5aad7
-MISC ChangeLog 1649 RMD160 c12a3411324ab8b834b8618391af275ae6833e96 SHA1 51dbfac5af746a36495c53ce0f81073e46159fdd SHA256 7ef1a081e4f98e9ae5cdbdfcaf38683c09300c8ec57dbcad68144d4c414c4d79
+EBUILD clementine-0.4.ebuild 1533 RMD160 f9d9512f78fe75d71b9f887e6be3a0511c6ea483 SHA1 6d080577db83c531173e287a015e3ad245e6c72d SHA256 64deca7bb26b28676a7d2c41c66cf859a776c382ec443e5d154b104ff473d4a5
+MISC ChangeLog 1885 RMD160 1e999bb39f24e91ce3541223cddfef711076a217 SHA1 61d9b9300556c06c3efc40ff1a828b5179c44449 SHA256 44cbf1c3cec546267dd4acf711573aab5c2c74f9e13f924454849648f83b2571
 MISC metadata.xml 160 RMD160 10be84fed28405abd22adc6689e87e5bb77e3501 SHA1 0c1bb16a7cc376ef35b87d8699ec9504718d36b9 SHA256 6bafe4a5c7b42309f124ebc2a9d78ebe5379aec4dcdc88c0bda2ab79c9851a6b
