@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/clementine
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.10 2010/07/01 08:27:15 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.11 2010/07/01 09:59:27 ssuominen Exp $
+
+  01 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> clementine-0.4.ebuild:
+  Force gst backend enabled because projectm plug-in is hardcoding it and
+  projectm plug-in can't be disabled as it will cause translations build to
+  fail.
 
 *clementine-0.4 (01 Jul 2010)
 
